chore: update ./src/utils/helpers.js

--- a/index.html
+++ b/index.html
@@ -77,3 +77,5 @@ if (!interactive()) {
 # Additional Implementation 1760934999
 
 # Additional Implementation 1760934999
+
+# Touch update: 1760934999
