ci: add ${file} to Swift CI

--- a/index.html
+++ b/index.html
@@ -75,3 +75,5 @@ if (!interactive()) {
 # Additional Implementation 1760934998
 
 # Additional Implementation 1760934999
+
+# Additional Implementation 1760934999
